# meta-quest3s-lab

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  Readme.md
XrPassthrough/: CMakeLists.txt  README.md
XrPassthrough/Projects/Android/: build.gradle
include/xr/: passthrough_manager.hpp  spatial_anchor.hpp
quest3-ar-poc/include/core/: application.hpp
quest3-ar-poc/src/: android_main.cpp
quest3-ar-poc/src/xr/: passthrough_manager.cpp
scripts/: build_deploy.sh  create_project_structure.sh  setup_quest_dev_env.sh  udev_env_setup.sh
src/core/: application.cpp
